system/gatekeeper/templates/constrainttemplate-deprecated-api-versions.yaml
# NOTE: This constraint template is in the process of being superseded by GkDeprecatedApiVersion.

apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: gkdeprecatedapiversions
spec:
  crd:
    spec:
      names:
        kind: GkDeprecatedApiVersions
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            helmManifestParserURL:
              type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package deprecatedapiversions

        violation[{"msg": msg}] {
          1 == 2
          msg := "dummy"
        }
